--- a/popup.html
+++ b/popup.html
@@ -2,11 +2,11 @@
 <!doctype html>
 <html>
   <head>
-    <title>GTmetrix Analyzer</title>
+    <title> Mysso </title>
     <script src="popup.js"></script>
   </head>
   <body>
-    <h1>GTmetrix Analyzer</h1>
-    <button id="checkPage">Check this page now!</button>
+    <button id="sharedata">Accept Data or not</button>
+    <div id='mostVisited_div'></div>
   </body>
 </html>
